[package]

name = "burst_trie"
version = "0.0.1"
authors = ["arthurprs <arthurprs@gmail.com>"]

[dependencies]
rand = "0.3.7"
crossbeam = "*"
spin = "*"
arrayvec = "*"
lazy_static = "*"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 8

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[profile.bench]
debug = true
