[package]

name = "burst_trie"
version = "0.0.1"
authors = ["arthurprs <arthurprs@gmail.com>"]

[dependencies]
rand = "0.3.7"
spin = "*"
arrayvec = "*"
lazy_static = "*"

[dependencies.crossbeam]
git="https://github.com/aturon/crossbeam.git"

[profile.dev]
codegen-units = 2

# [profile.release]
# debug = true
#
# [profile.bench]
# debug = true
